--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -4,3 +4,5 @@ pt-BR:
       register: Cadastro
       financial_movements: Movimentação Financeira
       movements: Movimentação
+      actions:
+        move: Movimentar
