implementado mensagens de feedback para as validaçoes do bootstrap

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -10,3 +10,5 @@ pt-BR:
     active:
       true: Sim
       false: Não
+    validations:
+      required: O preenchimento deste campo é obrigatório
