--- a/config/locales/models/financial_movement/pt-BR.yml
+++ b/config/locales/models/financial_movement/pt-BR.yml
@@ -14,3 +14,8 @@ pt-BR:
         financial_movement_kind_id: Tipo
         amount: Valor
         code: Código
+    errors:
+      messages:
+        date_less_than_last_move: Data não pode ser menor que %{date}
+        good_inative: O Bem está inativo
+        greater_than_depreciable_amount: O valor da depreciação não pode ser maior que %{depreciable_amount}
