--- a/config/locales/views/depreciation/pt-BR.yml
+++ b/config/locales/views/depreciation/pt-BR.yml
@@ -2,4 +2,9 @@ pt-BR:
   views:
     depreciation:
       title: Depreciação
-      select: Selecionar
+      actions:
+        depreciate: Depreciar
+        select: Selecionar
+      form:
+        fields:
+          movement_date: Data
