adicionado filtro para a depreciação

--- a/config/locales/views/depreciation/pt-BR.yml
+++ b/config/locales/views/depreciation/pt-BR.yml
@@ -8,3 +8,6 @@ pt-BR:
       form:
         fields:
           movement_date: Data
+      loading_text:
+        sub_kinds: Carregando Sub Tipos...
+        categories: Carregando Categorias...
