--- a/config/locales/views/pt-BR.yml
+++ b/config/locales/views/pt-BR.yml
@@ -15,4 +15,6 @@ pt-BR:
       select: uma opção deve ser selecionada
       invalid_date: "o formato da data deve ser: dd/mm/aaaa"
       amount_min_value: o valor deve ser maior que 0,01
-    all: Todos
+    all:
+      male: Todos
+      female: Todas
