implementado selects dinâmicos para a view de depreciação, remomividos as actions e rotas para sub tipos e categorias

--- a/config/locales/views/depreciation/pt-BR.yml
+++ b/config/locales/views/depreciation/pt-BR.yml
@@ -5,6 +5,7 @@ pt-BR:
       actions:
         depreciate: Depreciar
         select: Selecionar
+        filter: Filtrar
       form:
         fields:
           movement_date: Data
