implementado collapse para os filtros da tela de deprepreciçao, codigo dos filtros movidos para uma partial.

--- a/config/locales/views/depreciation/pt-BR.yml
+++ b/config/locales/views/depreciation/pt-BR.yml
@@ -12,3 +12,6 @@ pt-BR:
       loading_text:
         sub_kinds: Carregando Sub Tipos...
         categories: Carregando Categorias...
+      filters:
+        show: Filtros
+        hide: Ocultar Filtros
