criada a rota pra a action create para o controller das depreciaçoes, renomeado os aruivos de deprececiaçao (depreciation => depreciations), adicionado campos com ids dos filtros para o form de depreciaçao.

--- a/config/locales/views/depreciations/pt-BR.yml
+++ b/config/locales/views/depreciations/pt-BR.yml
@@ -1,11 +1,12 @@
 pt-BR:
   views:
-    depreciation:
+    depreciations:
       title: Depreciação
       actions:
         depreciate: Depreciar
         select: Selecionar
         filter: Filtrar
+        apply: Aplicar
       form:
         fields:
           movement_date: Data
