implementado links de logout e alterar senha para o usuario logado. criado controller de usuario para mudança de senha.

--- a/config/locales/views/pt-BR.yml
+++ b/config/locales/views/pt-BR.yml
@@ -6,6 +6,7 @@ pt-BR:
       new: Novo
       back: Voltar
       destroy: Excluir
+      cancel: Cancelar
     confirm: Você tem certeza?
     active:
       true: Sim
