corrigido bug ao acessar jobs de usuarios pela primeira vez

--- a/config/locales/views/depreciations/pt-BR.yml
+++ b/config/locales/views/depreciations/pt-BR.yml
@@ -8,6 +8,7 @@ pt-BR:
         filter: Filtrar
         apply: Aplicar
         new: Nova Depreciação
+        depreciate_all: Depreciar todos os patrimônios?
       form:
         fields:
           movement_date: Data
