adicionado traduçoes com i18n nos campos de tipo e sub tipo do form do bem.

--- a/config/locales/models/good/pt-BR.yml
+++ b/config/locales/models/good/pt-BR.yml
@@ -19,6 +19,8 @@ pt-BR:
         net_amount: Valor Líquido
         last_depreciation_date: Data da Última Depreciação
         last_depreciation: Última Depreciação
+        kind: Tipo
+        sub_kind: Sub Tipo
       good/situations:
         active: Ativo
         inactive: Inativo
