implementaçao do modal para os departamentos no cadastro do bem

--- a/config/locales/views/pt-BR.yml
+++ b/config/locales/views/pt-BR.yml
@@ -7,6 +7,7 @@ pt-BR:
       back: Voltar
       destroy: Excluir
       cancel: Cancelar
+      select: Selecionar
     confirm: Você tem certeza?
     active:
       true: Sim
