implementa tabela na seleçao de departamentos

--- a/config/locales/views/pt-BR.yml
+++ b/config/locales/views/pt-BR.yml
@@ -8,6 +8,7 @@ pt-BR:
       destroy: Excluir
       cancel: Cancelar
       select: Selecionar
+      save: Salvar
     confirm: Você tem certeza?
     active:
       true: Sim
